objects/RebateProgram.object
<CustomObject>
    <fields>
        <fullName>PMC_CLM_RebateProgramOrder__c</fullName>
        <description>Number indicating the position within its group or sales agreement.</description>
        <label>Rebate Program Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Projected_Incentive__c</fullName>
        <label>Projected Incentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Sales Agreement</description>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Rebate Programs</relationshipLabel>
        <relationshipName>Rebate_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_RebatePrograms</fullName>
        <filterScope>Everything</filterScope>
        <label>AllRebatePrograms</label>
    </listViews>
    <listViews>
        <fullName>My_Activated_Rebates</fullName>
        <columns>Name</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <columns>Frequency</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>My Activated Rebates</label>
    </listViews>
    <listViews>
        <fullName>My_RebatePrograms</fullName>
        <columns>Name</columns>
        <columns>Status</columns>
        <columns>StartDate</columns>
        <columns>EndDate</columns>
        <columns>Owner</columns>
        <columns>CreatedDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Rebate Programs</label>
    </listViews>
    <recordTypes>
        <fullName>Exclusive_Space</fullName>
        <active>true</active>
        <label>Exclusive Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_Program</fullName>
        <active>true</active>
        <label>Rebate Program</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PMC_SS_RestrictRebateProgramEdit</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Program for Under Revision or Approved Sales Agreement.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT( ISCHANGED( PMC_CLM_RebateProgramOrder__c ) ),

OR(
AND(
NOT(
OR(
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Active&apos;) ,
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Activated&apos;)

),
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Inactive&apos;) ,
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;)

)
)
),
NOT(ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;)),
OR(
ISPICKVAL( PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Approved&apos;),
ISPICKVAL(PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c, &apos;Under Revision&apos;)
)
),
AND(
ISNEW(),
OR( ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Archived&apos;),
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;),
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;) )
)
),

OR((PRIORVALUE( PMC_SS_Projected_Incentive__c ) = PMC_SS_Projected_Incentive__c) ,ISBLANK(PMC_SS_Projected_Incentive__c))


)</errorConditionFormula>
        <errorMessage>Rebate Programs can’t be created/edited at this stage. Please Amend the Sales Agreement to make revisions to Rebate Programs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictTest</fullName>
        <active>false</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Program for Under Revision or Approved Sales Agreement.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT( ISCHANGED( PMC_CLM_RebateProgramOrder__c ) ),

OR(
AND(
NOT(
OR(
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Active&apos;) ,
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Activated&apos;)

),
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Inactive&apos;) ,
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;)

)
)
),
NOT(ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;)),
OR(
ISPICKVAL( PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Approved&apos;),
ISPICKVAL(PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c, &apos;Under Revision&apos;)
)
),
AND(
ISNEW(),
OR( ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Archived&apos;),
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;),
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;) )
)
),

OR((PRIORVALUE( PMC_SS_Projected_Incentive__c ) = PMC_SS_Projected_Incentive__c) ,ISNEW())


)</errorConditionFormula>
        <errorMessage>TEST &gt;&gt;&gt;!!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictUpdateOnInactiveRebPrg</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Program for Under Revision or Approved Sales Agreement.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
OR(
ISPICKVAL( PRIORVALUE(Status) , &apos;Inactive&apos;),
AND(
ISPICKVAL( Status, &apos;Inactive&apos;),
NOT(
OR( 
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Archived&apos;), 
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;), 
ISPICKVAL( PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;) )
)
)
)
)</errorConditionFormula>
        <errorMessage>Inactive Rebate Programs cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictUpdateWhenStatusActive</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Program when in Active status.</description>
        <errorConditionFormula>AND( 
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT( ISNULL(PMC_SS_SalesAgreement__c  ) ),
NOT( ISPICKVAL(PMC_SS_SalesAgreement__r.Status, &apos;Activated&apos;) ),
ISPICKVAL( Status , &apos;Active&apos;)
)</errorConditionFormula>
        <errorMessage>Cannot activate the Rebate Program until the Sales Agreement is Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_ValidateStartAndEndDates</fullName>
        <active>true</active>
        <description>Rule to ensure that Rebate Program Start Date &amp; End Date are within Sales Agreement Dates.</description>
        <errorConditionFormula>IF(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
OR(
StartDate &lt; PMC_SS_SalesAgreement__r.StartDate,
EndDate &gt; PMC_SS_SalesAgreement__r.EndDate
),
false
)</errorConditionFormula>
        <errorMessage>Please add a Rebate Program that has time duration within the Sales Agreement&apos;s time duration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_test1</fullName>
        <active>false</active>
        <description>Restrict</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,

ISPICKVAL(  Status, &apos;Active&apos;),

ISCHANGED(PMC_SS_Projected_Incentive__c),
NOT(PRIORVALUE(PMC_SS_Projected_Incentive__c) = NULL)
)</errorConditionFormula>
        <errorMessage>STOP!</errorMessage>
    </validationRules>
</CustomObject>